tests/baselines/reference/objectLitStructuralTypeMismatch.errors.txt
tests/cases/compiler/objectLitStructuralTypeMismatch.ts(2,5): error TS2323: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
  Property 'a' is missing in type '{ b: number; }'.


==== tests/cases/compiler/objectLitStructuralTypeMismatch.ts (1 errors) ====
    // Shouldn't compile
    var x: { a: number; } = { b: 5 };
        ~
!!! error TS2323: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
!!! error TS2323:   Property 'a' is missing in type '{ b: number; }'.